# pablomazo.github.io

./: Makefile  gen_cv.py  index.html  pyproject.toml
.github/workflows/: deploy.yaml
data/: cv.html.in  cv.tex.in  cv.yaml  index.html.in  pub_extra.yaml  references.json  styles.css
