[tool.poetry]
name = "personal-page"
version = "0.0.0"
description = ""
authors = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
scholarly = "1.7.11"
PyYAML = "^6"
Jinja2 = "^3"

[tool.poetry.dev-dependencies]
flake8 = "^3.5"
flake8-bugbear = ">=18.8"
flake8-comprehensions = ">=1.4"
flake8-quotes = ">=3"
black = ">=20-beta.0"
pep8-naming = ">=0.7"
isort = "^5"
pydocstyle = "^5"

[tool.black]
target-version = ["py38"]
